# eufundingme

./: .env.example  .gitignore  DEMO-PROFILES.md  README.md  production-gap-audit-2026-04-18-agentic-cli-postcheck.md  production-gap-audit-2026-04-18.md  pyproject.toml  requirements.txt
backend/: __init__.py  access_control.py  app.py  application_brief.py  billing_client.py  cli.py  cli_services.py  config.py  ec_client.py  embeddings.py  grant_detail.py  indexer.py  live_grant_cache.py  live_grants.py  match_runtime.py  matcher.py  models.py  normalize.py  observability.py  openai_client.py  profile_resolver.py  request_ids.py  search_artifacts.py  snapshot_store.py  state.py  translation.py  website_profile.py
backend/data/: grant-index.seed.json
docs/: agentic-cli-feature.md
frontend/: app.js  index.html  styles.css
scripts/: build_seed_snapshot.py  eufundingme
tests/: test_api.py  test_billing_client.py  test_build_seed_snapshot.py  test_config.py  test_docs_contract.py  test_frontend_behavior.py  test_frontend_contract.py  test_grant_detail.py  test_indexer.py  test_live_grants.py  test_matcher.py  test_normalize.py  test_observability.py  test_openai_live_smoke.py  test_profile_resolver.py  test_search_artifacts.py  test_state.py
tests/cli/: _helpers.py  test_cli_smoke.py  test_index_status_commands.py  test_match_command.py  test_parser.py  test_profile_command.py  test_smoke.py  test_status_schema_contract.py
video/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/scripts/: generate-voiceover.ts
(+22 files in other folders)
